# copy_trading_dhan

./: docs_links.txt
.cursor/rules/: Global-Development-Workflow.md  README.md
tasks/Task-001-Copy-Trading-Architecture/: .gitignore  DEPLOYMENT.md  INDEX.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  (+5 more)
tasks/Task-009-DhanHQ-API-Architecture/: .gitignore  ALL_9_ORDERS_ENDPOINTS_VERIFICATION.md  DATABASE_GET_ORDER_SUPPORT.md  DATABASE_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  EXECUTIVE_SUMMARY.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  TESTING.md  TRADES_OF_ORDER_VERIFICATION.md  TRADE_BOOK_COMPLETE_SUMMARY.md  changelogs.md  env.example  errors.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/: ARCHIVE_NOTE.md
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/: MANIFEST.md
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/config/: __init__.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/database/: database.py  models.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/orders/: __init__.py  order_manager.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/position_sizing/: position_sizer.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/utils/: __init__.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/20251003-144230/Task-001-old-architecture/websocket/: __init__.py  ws_manager.py
tasks/Task-009-DhanHQ-API-Architecture/deleted/md/: COMPLETE_DATABASE_FIELD_VERIFICATION.md  DATABASE_IMPLEMENTATION_SUMMARY.md  DATABASE_SCHEMA_V3.md  DOCUMENTATION_COVERAGE_TRADES_OF_ORDER.md  DOCUMENTATION_INDEX.md  LINE_BY_LINE_API_COVERAGE.md  LINE_BY_LINE_DOCUMENTATION_VERIFICATION.md  MODELS_AND_DATABASE_EXPLANATION.md  ORDERS_API_COMPLETE_SUMMARY.md  ORDER_MODEL_COMPLETE_MAPPING.md  TODO.md  TRADE_BOOK_COVERAGE_ANALYSIS.md  TRADE_BOOK_QUICK_REFERENCE.md
tasks/Task-009-DhanHQ-API-Architecture/examples/: README.md  quick_start.py
tasks/Task-009-DhanHQ-API-Architecture/src/: __init__.py  main.py
tasks/Task-009-DhanHQ-API-Architecture/src/core/: __init__.py  config.py  database.py  models.py  order_replicator.py  position_sizer.py
tasks/Task-009-DhanHQ-API-Architecture/src/core/database/: migrate_to_v3.sql  schema.sql  schema_v3_comprehensive.sql
tasks/Task-009-DhanHQ-API-Architecture/src/dhan_api/: __init__.py  authentication.py  edis.py  forever_order.py  funds.py  live_order_update.py  orders.py  portfolio.py  postback.py  statement.py  super_order.py  traders_control.py
tasks/Task-009-DhanHQ-API-Architecture/src/utils/: __init__.py  logger.py  resilience.py
tasks/Task-009-DhanHQ-API-Architecture/tests/: README.md  __init__.py  conftest.py  test_config.py  test_database.py  test_integration.py  test_models.py  test_position_sizer.py  test_resilience.py
(+72 files in other folders)
